app/assets/stylesheets/dm/pages/_home.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.dm-homepage {
  .homepage-featured-topic-image-container,
  .homepage-featured-innovation-image-container {
    max-width: 308px;

    img {
      @include u-height("full");
      @include u-width("full");
      object-fit: cover;
      aspect-ratio: 58 / 39;

      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
        @include u-display("none", !important);
      }
    }

    @media screen and (min-width: 1024px) {
      max-width: unset;
    }
  }

  .homepage-search {
    @media screen and (max-width: 1023px) {
      margin-top: 1rem;
    }

    #dm-homepage-search-field {
      &::placeholder {
        color: color($theme-color-base-ink) !important;
      }
    }

    #dm-homepage-search-button {
      @include transition-btn-colors;
    }

    #search-dropdown {
      top: 100%; /* Position below the input */
      @include u-border("gray-30");
      @include u-position("absolute");
      z-index: 2000;
    }

    .browse-all-link {
      color: color($theme-color-base-ink);
      @include u-text-decoration("underline");

      &:hover,
      &:focus {
        color: color("primary-dark");
      }

      &:active {
        color: color("primary-vivid");
      }
    }

    .result-section:not(:last-child) {
      padding-bottom: 1rem;
      border-bottom: 1px solid black;
    }

    #category-list,
    #practice-list,
    #community-list {
      a {
        text-decoration: none;
        color: color($theme-color-base-ink);
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;

        &:hover,
        &:active,
        &:focus {
          @include u-text-decoration("underline");
        }

        &:visited {
          color: color($theme-color-base-ink);
        }
      }
    }
  }

  .featured-innovation-content-container {
    @media screen and (min-width: 1024px) {
      flex-direction: row-reverse;
      // needed for Firefox support
      -webkit-flex-direction: row-reverse;
    }
  }

  .nominate-practice-section {
    .grid-row {
      @media screen and (min-width: 1024px) {
        @include u-flex("align-center");
      }
    }
  }

  .newsletter-subscription-section {
    form {
      max-width: unset !important;
    }

    .grid-row {
      @media screen and (min-width: 1024px) {
        @include u-height("full");
      }
    }

    .subscribe-button-container {
      @include u-text("left");

      button {
        width: 166px !important;
      }
    }
  }

  .shark-tank-banner {
    @include u-line-height("sans", 3);
    background-color: color($theme-color-warning-lighter);

    a {
      font-weight: 600;
      &:hover,
      &:focus {
        @include u-text-decoration("underline");
        color: color($theme-color-base-ink);
      }
    }
  }
}

